--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
 - master
 
 pool:
-  vmImage: 'Ubuntu-16.04'
+  vmImage: 'ubuntu-16.04' # other options: 'macOS-10.13', 'win1803'
 
 variables:
   imageName: 'your-container-image-name:$(build.buildId)'
