--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,10 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+
+- task: Docker@2
+  displayName: Login to ACR
+  inputs:
+    command: login
+    containerRegistry: 'RDO Dev-Test - jenkinsK8sRegistry'
+
