Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,5 +22,5 @@ steps:
   displayName: Login to ACR
   inputs:
     command: login
-    containerRegistry: 'RDO Dev-Test - jenkinsK8sRegistry'
+    containerRegistry: 'jenkinsK8sRegistry'
 
