--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,3 +24,9 @@ steps:
     command: login
     containerRegistry: 'jenkinsK8sRegistry'
 
+- task: Docker@2
+  inputs:
+    containerRegistry: 'jenkinsK8sRegistry'
+    repository: 'sample'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
