Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ stages:
         displayName: Container
         
         pool:
-          vmImage: 'ubuntu-latest'
+          vmImage: $(vmImageName)
 
         steps:
         - script: echo Hello, world!
