Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ stages:
             repository: 'sample'
             command: 'buildAndPush'
             Dockerfile: '**/Dockerfile'
-          condition: ne(variables['skipDockerBuild'], 'true'))
+          condition: ne(variables['skipDockerBuild'], 'true')
 
   - stage: deploy
     jobs:
